# My_RAG

./: .gitignore  Makefile  README_JP.md  pyproject.toml
data/output/search_results/: dataset_code_public.json  dataset_docs_public.json
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: __main__.py  ingest.py  ingest_optional.py  models.py
src/student/: __main__.py  cli.py
src/student/core/: answer.py  evaluater.py  indexer.py  indexer_optional.py  ingest.py  models.py  searcher.py
